# fs

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  PLAN.md  PROGRESS.md  README.md
assets/logo-drafts/: contact-sheet.html
docs/: 00-map.md  01-tokenizer.html  01-tokenizer.md  02-weights.html  02-weights.md  RESOURCES.md  dev-loop.md  diagrams.html  index.html  m0-tokenizer.html  m0-tokenizer.md  m1-weights.html  milestones.html  prerequisites.html  prerequisites.md  testing.md
docs/assets/css/: main.css
docs/assets/js/: app.js  diagrams.js
docs/learnings/: 01-safetensors-vs-gguf.html  01-safetensors-vs-gguf.md  02-radix-tree.html  02-radix-tree.md  03-bpe.html  03-bpe.md  04-embedding-models.html  04-embedding-models.md  05-reading-shapes.html  05-reading-shapes.md  06-mmap.html  06-mmap.md  07-bf16.html  07-bf16.md  08-row-major-strides.md  09-config.html  09-config.md  10-transformer-block-anatomy.html  10-transformer-block-anatomy.md  README.md  index.html
scripts/: README.md  fetch_model.py  gen_golden.py  pyproject.toml
src/: config.rs  forward.rs  inspect.rs  lib.rs  main.rs  safetensors.rs  tensor.rs  tokenizer.rs
tests/: golden_tokenizer.rs
tests/golden/: tokenizer.json
tools/: README.md  diagram-review.md  diagram-review.py  license-check.sh  sync-check.sh  sync-ledger.tsv
