[package]
name = "fs"
version = "0.1.0"
edition = "2024"
description = "Failed Star — a tiny from-scratch LLM inference engine, built to learn."
license = "MIT"

# We keep a library crate (the engine) and a thin binary (the `fs` CLI) that
# drives it. Splitting them means milestones can be unit-tested as library code
# while `src/main.rs` stays a tiny dispatcher.
[lib]
name = "fs"
path = "src/lib.rs"

[[bin]]
name = "fs"
path = "src/main.rs"

[dependencies]
# Qwen's pre-tokenization pattern uses Unicode classes plus look-around. That is
# tokenizer compatibility glue, not the inference-engine idea we are here to
# learn, so we use a focused regex dependency instead of hand-rolling it.
fancy-regex = "0.18.0"

# Qwen's tokenizer assets are JSON. Parsing JSON correctly is not the tokenizer
# lesson, so use the standard Rust ecosystem parser instead of a side quest.
serde_json = "1.0.150"
